--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.14.0",
-    "fcc-express-bground": "https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
+    "fcc-express-bground": "git+https://github.com/freeCodeCamp/fcc-express-bground-pkg.git"
   },
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
-  }
+  },
+  "description": "This is the boilerplate code for the Basic Node and Express Challenges. Instructions for working on these challenges start at https://www.freecodecamp.org/learn/apis-and-microservices/basic-node-and-express/",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
